--- a/SistTestMillon/SistTestMillon/Views/Account/Index.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Account/Index.cshtml
@@ -6,16 +6,13 @@
 <div class="o-page__card">
     <div class="c-card u-mb-xsmall">
         <header class="c-card__header u-pt-large">
-            <a class="c-card__icon" href="#!">
-                <img src="~/Content/img/logoinventario.png" alt="Panel de Control" />
-            </a>
-            <h1 class="u-h3 u-text-center u-mb-zero">Bienvenidos al Sistema de Inventarios.</h1>
+            <h1 class="u-h3 u-text-center u-mb-zero">Bienvenidos al Sistema de Psicologia.</h1>
         </header>
 
         <form class="c-card__body formAjax" method="post" action="~/Account/Index">
             <div class="c-field u-mb-small">
-                <label class="c-field__label" for="input1">Correo electrónico</label>
-                <input class="c-input" type="email" id="email" required="required" name="email" placeholder="clark@dashboard.com">
+                <label class="c-field__label" for="input1">Usuario</label>
+                <input class="c-input" type="text" id="Usuario" required="required" name="Usuario" placeholder="nombre de usuario">
             </div>
             <div class="c-field u-mb-small">
                 <label class="c-field__label" for="input2">Contraseña</label>
