--- a/SistTestMillon/SistTestMillon/Views/Home/Index.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    string Nombre = ViewBag.Usuario;
 }
 
 <div class="row">
