--- a/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Panel de Control | Sistema de Inventarios</title>
+    <title>Panel de Control | Sistema de Psicologia</title>
     <meta name="description" content="Dashboard UI Kit">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Google Font -->
@@ -41,35 +41,48 @@
                 </li>
                 <li class="c-sidebar__item">
                     <a class="c-sidebar__link" href="~/Productos">
-                        <i class="fa fa-product-hunt u-mr-xsmall"></i>Productos <span class="c-badge c-badge--success c-badge--xsmall u-ml-xsmall">New</span>
+                        <i class="fa fa-product-hunt u-mr-xsmall"></i>Citas <span class="c-badge c-badge--success c-badge--xsmall u-ml-xsmall">New</span>
                     </a>
                 </li>
+                @if (HttpContext.Current.Session["TipoUsuario"].Equals("Paciente") || HttpContext.Current.Session["TipoUsuario"].Equals("administrador"))
+                {
+                <li class="c-sidebar__item">
+                    <a class="c-sidebar__link" href="~/TestMillon">
+                        <i class="fa fa-table u-mr-xsmall"></i>Test De Millon
+                    </a>
+                </li>
+                }
+
+                @if (HttpContext.Current.Session["TipoUsuario"].Equals("Psicologo")|| HttpContext.Current.Session["TipoUsuario"].Equals("administrador")) {
                 <li class="c-sidebar__item">
                     <a class="c-sidebar__link is-active" href="analytics.html">
-                        <i class="fa fa-balance-scale u-mr-xsmall"></i>Compras
+                        <i class="fa fa-balance-scale u-mr-xsmall"></i>Pacientes
                     </a>
                 </li>
                 <li class="c-sidebar__item">
                     <a class="c-sidebar__link" target="_blank" href="index.html">
-                        <i class="fa fa-users u-mr-xsmall"></i>Proveedores
+                        <i class="fa fa-users u-mr-xsmall"></i>Historias
                     </a>
                 </li>
                 <li class="c-sidebar__item">
                     <a class="c-sidebar__link" target="_blank" href="projects.html">
-                        <i class="fa fa-table u-mr-xsmall"></i>Clientes
+                        <i class="fa fa-table u-mr-xsmall"></i>Diagnosticos
                     </a>
                 </li>
+                }
             </ul>
+            @if (HttpContext.Current.Session["TipoUsuario"].Equals("administrador"))
+            {
             <h4 class="c-sidebar__title">Apps</h4>
             <ul class="c-sidebar__list">
                 <li class="c-sidebar__item">
                     <a class="c-sidebar__link" target="_blank" href="boards.html">
-                        <i class="fa fa-money u-mr-xsmall"></i>Ventas
+                        <i class="fa fa-money u-mr-xsmall"></i>Psicologos
                     </a>
                 </li>
                 <li class="c-sidebar__item">
                     <a class="c-sidebar__link" href="calendar.html">
-                        <i class="fa fa-cog u-mr-xsmall"></i>Configuración
+                        <i class="fa fa-cog u-mr-xsmall"></i>Administradores
                     </a>
                 </li>
                 <li class="c-sidebar__item">
@@ -78,6 +91,7 @@
                     </a>
                 </li>
             </ul>
+            }
         </div><!-- // .c-sidebar -->
     </div><!-- // .o-page__sidebar -->
     <!-- MAIN CONTENT -->
@@ -89,57 +103,10 @@
                 <span class="c-sidebar-toggle__bar"></span>
             </button>
 
-            <h2 class="c-navbar__title u-mr-auto">Analytics</h2>
-            <div class="c-dropdown u-hidden-down@mobile">
-                <a class="c-notification dropdown-toggle" href="#" id="dropdownMenuUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="c-notification__icon">
-                        <i class="fa fa-user-o"></i>
-                    </span>
-                    <span class="c-notification__number">3</span>
-                </a>
-                <div class="c-dropdown__menu c-dropdown__menu--large dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuUser">
-                    <a href="#" class="c-dropdown__item dropdown-item o-media">
-                        <span class="o-media__img u-mr-xsmall">
-                            <span class="c-avatar c-avatar--xsmall">
-                                <img class="c-avatar__img" src="img/avatar1-72.jpg" alt="User's Profile Picture">
-                            </span>
-                        </span>
-                        <div class="o-media__body">
-                            <h6 class="u-mb-zero">Someone mentioned you</h6>
-                            <p class="u-text-mute">You have recieved a mention on twitter, check it out!</p>
-                        </div>
-                    </a>
-                    <a href="#" class="c-dropdown__item dropdown-item o-media">
-                        <span class="o-media__img u-mr-xsmall">
-                            <span class="c-avatar c-avatar--xsmall">
-                                <img class="c-avatar__img" src="img/avatar2-72.jpg" alt="User's Profile Picture">
-                            </span>
-                        </span>
-                        <div class="o-media__body">
-                            <h6 class="u-mb-zero">Recieved a Payment</h6>
-                            <p class="u-text-mute">You have recieved a mention on twitter, check it out!</p>
-                        </div>
-                    </a>
-                    <a href="#" class="c-dropdown__item dropdown-item o-media">
-                        <span class="o-media__img u-mr-xsmall">
-                            <span class="c-avatar c-avatar--xsmall">
-                                <img class="c-avatar__img" src="img/avatar3-72.jpg" alt="User's Profile Picture">
-                            </span>
-                        </span>
-                        <div class="o-media__body">
-                            <h6 class="u-mb-zero">You got a promotion</h6>
-                            <p class="u-text-mute">You have recieved a mention on twitter, check it out!</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            <h2 class="c-navbar__title u-mr-auto">Bienvenido</h2>
+
             <div class="c-dropdown dropdown u-mr-medium u-ml-small u-hidden-down@mobile">
-                <a class="c-notification dropdown-toggle" href="#" id="dropdownMenuAlerts" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="c-notification__icon">
-                        <i class="fa fa-bell-o"></i>
-                    </span>
-                    <span class="c-notification__number">3</span>
-                </a>
+
                 <div class="c-dropdown__menu c-dropdown__menu--large dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuAlerts">
                     <a href="#" class="c-dropdown__item dropdown-item o-media">
                         <span class="o-media__img u-mr-xsmall">
@@ -184,15 +151,20 @@
                         </div>
                     </a>
                 </div>
+                <div>                    
+                        @HttpContext.Current.Session["NombreUsuario"]                    
+                </div>
+
             </div>
             <div class="c-dropdown dropdown">
                 <a class="c-avatar c-avatar--xsmall has-dropdown dropdown-toggle" href="#" id="dropdwonMenuAvatar" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="c-avatar__img" src="img/avatar-72.jpg" alt="User's Profile Picture">
+                    <img  src="~/Content/img/users.png"  style="width:40px;height:40px">
                 </a>
                 <div class="c-dropdown__menu dropdown-menu dropdown-menu-right" aria-labelledby="dropdwonMenuAvatar">
                     <a class="c-dropdown__item dropdown-item" href="#">Edit Profile</a>
                     <a class="c-dropdown__item dropdown-item" href="#">View Activity</a>
-                    <a class="c-dropdown__item dropdown-item" href="#">Manage Roles</a>
+                    <a class="c-dropdown__item dropdown-item" href="@Url.Action("Cerrar", "TestMillon")">Cerrar Sesion</a>
+
                 </div>
             </div>
         </header><!-- // .c-navbar -->
