--- a/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
@@ -152,7 +152,7 @@
                     </a>
                 </div>
                 <div>                    
-                        @HttpContext.Current.Session["NombreUsuario"]                    
+                        @HttpContext.Current.Session["Nombres"]  @HttpContext.Current.Session["ApellidoPaterno"]  @HttpContext.Current.Session["ApellidoMaterno"]                
                 </div>
 
             </div>
