--- a/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
@@ -20,6 +20,8 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="~/Content/css/main.min.css">
     <link href="~/Content/css/custom.css" rel="stylesheet" />
+    
+    <link href="~/Content/css/bootstrap" rel="stylesheet" />
 </head>
 <body class="o-page">
     <!--[if lte IE 9]>
@@ -40,7 +42,7 @@
                     </a>
                 </li>
                 <li class="c-sidebar__item">
-                    <a class="c-sidebar__link" href="~/Productos">
+                    <a class="c-sidebar__link" href="~/Citas">
                         <i class="fa fa-product-hunt u-mr-xsmall"></i>Citas <span class="c-badge c-badge--success c-badge--xsmall u-ml-xsmall">New</span>
                     </a>
                 </li>
@@ -55,17 +57,17 @@
 
                 @if (HttpContext.Current.Session["TipoUsuario"].Equals("Psicologo")|| HttpContext.Current.Session["TipoUsuario"].Equals("administrador")) {
                 <li class="c-sidebar__item">
-                    <a class="c-sidebar__link is-active" href="analytics.html">
+                    <a class="c-sidebar__link is-active" href="~/Pacientes">
                         <i class="fa fa-balance-scale u-mr-xsmall"></i>Pacientes
                     </a>
                 </li>
                 <li class="c-sidebar__item">
-                    <a class="c-sidebar__link" target="_blank" href="index.html">
+                    <a class="c-sidebar__link" href="~/Historias">
                         <i class="fa fa-users u-mr-xsmall"></i>Historias
                     </a>
                 </li>
                 <li class="c-sidebar__item">
-                    <a class="c-sidebar__link" target="_blank" href="projects.html">
+                    <a class="c-sidebar__link"  href="~/Diagnostico">
                         <i class="fa fa-table u-mr-xsmall"></i>Diagnosticos
                     </a>
                 </li>
@@ -76,17 +78,17 @@
             <h4 class="c-sidebar__title">Apps</h4>
             <ul class="c-sidebar__list">
                 <li class="c-sidebar__item">
-                    <a class="c-sidebar__link" target="_blank" href="boards.html">
+                    <a class="c-sidebar__link"  href="~/Psicologos">
                         <i class="fa fa-money u-mr-xsmall"></i>Psicologos
                     </a>
                 </li>
                 <li class="c-sidebar__item">
-                    <a class="c-sidebar__link" href="calendar.html">
+                    <a class="c-sidebar__link" href="~/Administradores">
                         <i class="fa fa-cog u-mr-xsmall"></i>Administradores
                     </a>
                 </li>
                 <li class="c-sidebar__item">
-                    <a class="c-sidebar__link" target="_blank" href="news-feed.html">
+                    <a class="c-sidebar__link"  href="~/Users">
                         <i class="fa fa-user u-mr-xsmall"></i>Usuarios
                     </a>
                 </li>
@@ -151,8 +153,15 @@
                         </div>
                     </a>
                 </div>
-                <div>                    
-                        @HttpContext.Current.Session["Nombres"]  @HttpContext.Current.Session["ApellidoPaterno"]  @HttpContext.Current.Session["ApellidoMaterno"]                
+                <div>
+                     @if (HttpContext.Current.Session["Nombres"] == null || HttpContext.Current.Session["ApellidoPaterno"] ==null)
+                     {
+                         Response.Redirect("~/Account/Index");
+                     }
+                     else
+                     {
+                      <h6>@HttpContext.Current.Session["Nombres"] @HttpContext.Current.Session["ApellidoPaterno"] @HttpContext.Current.Session["ApellidoMaterno"]</h6>                
+                     }
                 </div>
 
             </div>
