--- a/SistTestMillon/SistTestMillon/Views/Shared/_ViewMillon.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Shared/_ViewMillon.cshtml
@@ -21,6 +21,8 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="~/Content/css/main.min.css">
     <link href="~/Content/css/custom.css" rel="stylesheet" />
+    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/css/bootstrap" rel="stylesheet" />
 </head>
 <body class="o-page">
     <!--[if lte IE 9]>
