--- a/SistTestMillon/SistTestMillon/Views/Diagnostico/ListaDiagnosticos2.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Diagnostico/ListaDiagnosticos2.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PagedList.IPagedList<Model.Diagnosticos>
 @using PagedList.Mvc
 @{ string strOrden = ""; string strImgOrder = "";}
-
+@using SistTestMillon.Helpers;
 
     <table class="c-table c-table--highlight u-mb-small">
         <caption class="c-table__title">
@@ -20,8 +20,8 @@
         <thead class="c-table__head c-table__head--slim">
 
             <tr class="c-table__row">
-                <th class="c-table__cell c-table__cell--head">N°</th>
                 <th class="c-table__cell c-table__cell--head">Dni</th>
+                <th class="c-table__cell c-table__cell--head">Paciente</th>
                 <th class="c-table__cell c-table__cell--head">Fecha</th>
                 <th class="c-table__cell c-table__cell--head">Hora de Inicio</th>
                 <th class="c-table__cell c-table__cell--head">Hora final</th>
@@ -38,15 +38,17 @@
                 {
                     <tr class="c-table__row CodElegido">
                         <td class="c-table__cell">
-                            @item.IdDiagnostico
-                        </td>
-                        <td class="c-table__cell">
                             @item.DniPaciente
                         </td>
                         <td class="c-table__cell">
-                            @item.Fecha
+                            @{var dd=PatronClinicoHelper.nombres(item.DniPaciente);
 
+                             }
+                            @dd
                         </td>
+                        <td class="c-table__cell">
+                            @item.Fecha
+                        </td>                           
                         <td class="c-table__cell">
                             @item.HoraInicio
                         </td>
@@ -58,7 +60,7 @@
                                 <a class="c-btn c-btn--success" onclick="seleccion(@item.IdDiagnostico)">
                                     <i class="fa fa-pencil-square-o u-mr-xsmall"></i>Elegir
                                 </a>
-                                @Html.ActionLink("Diagnostico", "ImprimirDetalle", new { id = item.IdDiagnostico }, new { @class = "c-btn c-btn--info", target = "_blank" })
+                                @Html.ActionLink("Detalle", "ImprimirDetalle", new { id = item.IdDiagnostico }, new { @class = "c-btn c-btn--info", target = "_blank" })
                             </div>
                         </td>
                     </tr>
