--- a/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="~/Content/css/main.min.css">
     <link href="~/Content/css/custom.css" rel="stylesheet" />
+    <link href="~/Content/css/main.css" rel="stylesheet" />
     
    
 </head>
